# oc

./: .gitignore  MIMARI_NOTLAR.md  ONLINE_HOST_SETUP.md  README.md  ROADMAP.md  index.html  manifest.md  package-lock.json  package.json  road map1.txt  road map2.txt  vite.config.ts
.github/workflows/: pages.yml  release.yml
corepack-templates/: teacher-sample.corepack
corepack-templates/science-core.corepack/: README.md  manifest.json  system_prompt.md
corepack-templates/teacher.corepack/: README.md  manifest.json  system_prompt.md
data/online-host/: recovery-attempts.json  temporary-profiles.json
data/science-libraries/: manifest.json
deploy/selfhost/: README.md
deploy/selfhost/caddy/: Caddyfile.example
integration/website/: contact-corei.js  inswx.html
legal/: EULA.md  PRIVACY_NOTICE.md  TELEMETRY_CONSENT.md  THIRD_PARTY_LICENSES.md
scripts/: core-host-api.mjs  fix-mojibake.mjs  fix-win1252-mojibake.mjs  site-paths.mjs  start-host-lan.ps1  start-ssh-reverse-tunnel.ps1  stop-host-lan.ps1  stop-ssh-reverse-tunnel.ps1  sync-site.mjs
src/: App.css  App.tsx  license-runtime.mjs  mjs-modules.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: brand-config.test.mjs  license-runtime.test.mjs  site-paths.test.mjs
