[package]
name = "oc"
version = "0.1.0"
description = "OC (OurCore) local AI core"
authors = ["OC"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.20"
rand = "0.8"
sha2 = "0.10"
tiny_http = "0.12"
ureq = { version = "2.12", features = ["json"] }
url = "2.5"
chrono = "0.4"
